<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_range_text"
        android:id="@+id/symbol_view_text"
        android:layout_marginTop="60dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/min_value_edit"
        android:ems="10"
        android:id="@+id/min_value"
        android:layout_below="@+id/symbol_view_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/max_value_edit"
        android:ems="10"
        android:id="@+id/max_value"
        android:layout_below="@+id/symbol_view_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_min_btn"
        android:id="@+id/set_min_value"
        android:layout_alignTop="@+id/min_value"
        android:layout_toRightOf="@+id/min_value"
        android:layout_toEndOf="@+id/min_value" />



    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_max_btn"
        android:id="@+id/set_max_value"
        android:layout_alignBottom="@+id/max_value"
        android:layout_toRightOf="@+id/min_value"
        android:layout_toEndOf="@+id/min_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/min_value_text_view"
        android:layout_alignBottom="@+id/min_value"
        android:layout_toRightOf="@+id/set_max_value"
        android:layout_toEndOf="@+id/set_max_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/max_value_text_view"
        android:layout_below="@+id/set_min_value"
        android:layout_alignLeft="@+id/min_value_text_view"
        android:layout_alignStart="@+id/min_value_text_view" />


</RelativeLayout>